# tobylog

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
assets/: widget-lifecycle.dot
examples/: label.c  text.c
include/: label.h  text.h  tobylog.h  widget.h
src/: label.c  string.c  string.h  text.c  tobylog.c  utf8.c  utf8.h
